Fixed problem where CommitListTitleText was cut off
Modified 1 file:
GitSyncMacApp/styles.bundle/styles/styletest/commit/commitslist.css

--- a/GitSyncMacApp/styles.bundle/styles/styletest/commit/commitslist.css
+++ b/GitSyncMacApp/styles.bundle/styles/styletest/commit/commitslist.css
@@ -79,7 +79,8 @@ Section#textContainer Text#date{
 :selected Section#textContainer Text#title{ 
 	color:grey3;/*#2AA3EF*/
 }
-Section#textContainer Text#title{ 
+Section#textContainer Text#title{
+    width:100%;
 	size:16px;
 	margin-top:0px;
 	color:<TextTheme3>;
